--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+# Naver Key
+NAVER_CLIENT_ID="ySqzqXAa_ox53jR1tNAY"
+NAVER_CLIENT_SECRET="uoVAJtOCT2"
