cleanArchitecture 초안 완성(api 호출을 통해 log 에 데이터 확인)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,11 +15,28 @@ android {
         versionCode 1
         versionName "1.0"
 
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation":
+                                     "$projectDir/schemas".toString()]
+
+            }
+        }
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField("String" , "CLIENT_ID" , NAVER_CLIENT_ID)
         buildConfigField("String" , "CLIENT_SECRET" , NAVER_CLIENT_SECRET)
 
+    }
+    // Did you forget to apply the Gradle Plugin? 에러 해결
+    kapt {
+        javacOptions {
+            // These options are normally set automatically via the Hilt Gradle plugin, but we
+            // set them manually to workaround a bug in the Kotlin 1.5.20
+            option("-Adagger.fastInit=ENABLED")
+            option("-Adagger.hilt.android.internal.disableAndroidSuperclassValidation=true")
+        }
     }
 
     buildTypes {
@@ -74,5 +91,8 @@ dependencies {
     // RecyclerView
     implementation("androidx.recyclerview:recyclerview:1.2.1")
 
+    // Activity KTX for viewModels()
+    implementation "androidx.activity:activity-ktx:1.1.0"
+    implementation "androidx.fragment:fragment-ktx:1.1.0"
 
 }
