--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,4 +107,7 @@ dependencies {
     // Firebase Auth
     implementation "com.google.firebase:firebase-auth-ktx"
 
+    // Facebook Login
+    implementation 'com.facebook.android:facebook-login:13.0.0'
+
 }
