--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,6 @@ kotlin.code.style=official
 # Naver Key
 NAVER_CLIENT_ID="ySqzqXAa_ox53jR1tNAY"
 NAVER_CLIENT_SECRET="uoVAJtOCT2"
+
+# FB RealTime DB Key
+USER_DB="Users"
